<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_linear_layout"
    style="@style/MainActivityLinearLayout"
    tools:context=".ui.main.MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/activity_main_cardview_sources"
        style="@style/MainActivityCardView"
        app:cardBackgroundColor="@android:color/black"
        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/activity_main_sources_title"
            style="@style/MainActivityCardViewTitle"
            android:text="@string/main_activity_sources_title"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/activity_main_sources_description"
            style="@style/MainActivityCardViewDescription"
            android:text="@string/main_activity_sources_description"
            android:textColor="@android:color/white"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_main_cardview_favorites"
        style="@style/MainActivityCardView"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_cardview_sources">

        <TextView
            android:id="@+id/activity_main_favorites_title"
            style="@style/MainActivityCardViewTitle"
            android:text="@string/main_activity_favorites_title"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/activity_main_favorites_description"
            style="@style/MainActivityCardViewDescription"
            android:text="@string/main_activity_favorites_description"
            android:textColor="@android:color/black"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/activity_main_cardview_queries"
        style="@style/MainActivityCardView"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_cardview_favorites">

        <TextView
            android:id="@+id/activity_main_queries_title"
            style="@style/MainActivityCardViewTitle"
            android:text="@string/main_activity_queries_title"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/activity_main_queries_description"
            style="@style/MainActivityCardViewDescription"
            android:text="@string/main_activity_queries_description"
            android:textColor="@android:color/black"/>

    </android.support.v7.widget.CardView>

</LinearLayout>